# ExploreSearchSystem

./: .gitignore  Apple Pencil Amazon.csv  Dockerfile  Makefile  Meta Learning.csv  README.md  app.py  docker-compose.yml  fetch.py  fetch_arxiv.py  fit.py  hello.csv  heroku.yml  make_BoW.py  preprocessing_of_words.py  pyproject.toml  scraperbox.py  som.py  tsom.py  あっぷる.csv  アマゾン 木.csv  ファッション.csv  ペット.csv  マック.csv  宮崎一希.csv  機械学習.csv
data/tmp/: Apple Pencil Amazon.npy  Apple Pencil Amazon_SOM_history.pickle  Apple Pencil Amazon_label.npy  Meta Learning.npy  Meta Learning_SOM_history.pickle  Meta Learning_label.npy  あっぷる.npy  あっぷる_SOM_history.pickle  あっぷる_UKR_history.pickle  あっぷる_history.pickle  あっぷる_label.npy  アマゾン 木.npy  アマゾン 木_SOM_history.pickle  アマゾン 木_UKR_history.pickle  アマゾン 木_label.npy  ファッション.npy  ファッション_SOM_history.pickle  ファッション_TSOM_history.pickle  ファッション_UKR_history.pickle  ファッション_label.npy  ペット.npy  ペット_SOM_history.pickle  ペット_UKR_history.pickle  ペット__history.pickle  ペット_history.pickle  ペット_label.npy  マック.npy  マック_SOM_history.pickle  マック_UKR_history.pickle  マック_label.npy  宮崎一希.npy  宮崎一希_SOM_history.pickle  宮崎一希_UKR_history.pickle  宮崎一希_label.npy  機械学習.npy  機械学習_SOM_history.pickle  機械学習_UKR_history.pickle  機械学習_label.npy
dev/: Grad_norm.py  fetch_make_BoW.ipynb  fetch_make_csv.ipynb  ファッション.csv
webapp/: __init__.py  dash.py  event_handler.py  figure_maker.py
webapp/assets/: landing.css  script.js
