[tool.poetry]
name = "explore-search-system"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8.11"
numpy = "^1.21.2"
scikit-learn = "^0.24.2"
tqdm = "^4.62.2"
scipy = "^1.7.1"
pandas = "^1.3.2"
dash = "^1.21.0"
gunicorn = "^20.1.0"
joblib = "^1.0.1"
pip = "^21.2.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
